<resources>
    <string name="app_name">DemoAudioRecoder</string>
    <!--    main activity-->
    <string name="ct_recoder">00</string>
    <!--navigation-->
    <string name="title_list_recording">Library</string>
    <string name="title_recording">Voice Recorder</string>
    <string name="title_setting">Settings</string>
    <!-- recorder-->
    <string name="tv_recorder">Tap to start recording</string>

    <!-- Library recoder-->
    <string name="tv_name_detail_audio">File name</string>
    <string name="tv_location_detail_audio">File location</string>
    <string name="tv_size_detail_audio">File size</string>
    <string name="tv_time_detail_audio">Creation time</string>
    <string name="tv_duration_detail_audio">Duration</string>
    <string name="title_image">image</string>

    <!-- popop menu item library-->
    <string name="pp_edit_item_library">Rename</string>
    <string name="pp_delete_item_library">Delete</string>
    <string name="pp_share_item_library">Share</string>
    <string name="pp_editContent_item_library">Edit Content</string>
    <string name="pp_setRingTone_item_library">Set as ringtone</string>
    <string name="dialog_bt_yes">Yes</string>
    <string name="dialog_bt_no">No</string>
    <string name="dialog_tv_rename">Are you sure rename ?</string>
    <!--    detail-->
    <string name="tv_dtail_time_start_stop">00:00</string>
    <string name="list_library_empty"> No recording files available !</string>


</resources>
