<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailAudioActivity">


    <TextView
        android:id="@+id/tv_time_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_name_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/tv_location_detail_audio"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_path_audio"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/tv_size_detail_audio"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_size_audio"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/tv_time_detail_audio"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_audio"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/tv_duration_detail_audio"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_duration_audio"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/tv_name_detail_audio"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_name_audio"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_path_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_size_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_duration_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageView
        android:src="@drawable/ic_skip_next_black_24dp"
        android:id="@+id/iv_detail_next2_audio"
        android:layout_width="@dimen/all_35dp"
        android:layout_height="@dimen/all_35dp"
        android:contentDescription="@string/title_image"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_next1_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_next1_audio"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_next1_audio"></ImageView>

    <ImageView
        android:src="@drawable/ic_skip_previous_black_24dp"
        android:id="@+id/iv_detail_prev2_audio"
        android:layout_width="@dimen/all_35dp"
        android:layout_height="@dimen/all_35dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/title_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_detail_prev1_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"></ImageView>

    <ImageView
        android:id="@+id/iv_detail_prev1_audio"
        android:src="@drawable/ic_fast_rewind_black_24dp"
        android:layout_width="@dimen/all_35dp"
        android:layout_height="@dimen/all_35dp"
        android:contentDescription="@string/title_image"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_prev2_audio"
        app:layout_constraintEnd_toStartOf="@+id/iv_detail_play_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_prev2_audio"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_prev2_audio"></ImageView>

    <ImageView
        android:id="@+id/iv_detail_play_audio"
        android:layout_width="@dimen/all_70dp"
        android:layout_height="@dimen/all_70dp"
        android:contentDescription="@string/title_image"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_prev1_audio"
        app:layout_constraintEnd_toStartOf="@+id/iv_detail_next1_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_prev1_audio"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_prev1_audio"></ImageView>

    <ImageView
        android:id="@+id/iv_detail_next1_audio"
        android:layout_width="@dimen/all_35dp"
        android:layout_height="@dimen/all_35dp"
        android:contentDescription="@string/title_image"
        android:src="@drawable/ic_fast_forward_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_play_audio"
        app:layout_constraintEnd_toStartOf="@+id/iv_detail_next2_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_play_audio"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_play_audio"></ImageView>

    <SeekBar
        android:id="@+id/seekBar_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_detail_play_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>